--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit==1.35.0
-google-generativeai==0.3.2
-langchain==0.1.17
-langchain-community==0.0.33
-langchain-core==0.1.47
-langchain-google-genai==0.0.5
-langchain-text-splitters==0.0.1
-python-dotenv==1.0.1
-pdfplumber==0.10.2
-python-docx==1.1.0
-Pillow==10.2.0
-faiss-cpu==1.7.4
-proto-plus==1.23.0
+streamlit
+google-generativeai
+langchain
+langchain-community
+langchain-core
+langchain-google-genai
+langchain-text-splitters
+python-dotenv
+pdfplumber
+python-docx
+Pillow
+faiss-cpu
+proto-plus
