--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit
-google-generativeai
-langchain
-langchain-community
-langchain-core
-langchain-google-genai
-langchain-text-splitters
-python-dotenv
-pdfplumber
-python-docx
-Pillow
-faiss-cpu
-proto-plus
+streamlit==1.35.0
+google-generativeai==0.8.5
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-core==0.3.61
+langchain-google-genai==2.0.10
+langchain-text-splitters==0.3.8
+python-dotenv==1.0.1
+pdfplumber==0.11.6
+python-docx==1.1.2
+Pillow==10.4.0
+faiss-cpu==1.11.0
+proto-plus==1.23.0
